<resources>
    <string name="app_name">MoneyManager</string>

    // 01_登録・ログイン選択画面
    <string name="user_register">ユーザー登録</string>
    <string name="login">ログイン</string>

    // 02_登録画面
    <string name="email_address">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="birth_date">生年月日</string>
    <string name="agree_terms">利用規約に同意します</string>
    <string name="register">登録</string>
    <string name="input">入力してください</string>
    <string name="birthday_input_error">生年月日を入力してください。</string>
    <string name="firebaseException.weakPassword">パスワードが脆弱です！！！</string>
    <string name="firebaseException.invalidMailAddress">ールアドレスが不正です！！！</string>
    <string name="firebaseException.existedMailAddress">既に登録済みの可能性があります！！！</string>

    // 03_認証メール送信画面
    <string name="authcodeActivityTitle">メールアドレス確認</string>
    <string name="afterSendingText">メールアドレスの本人確認が完了していません。\n確認メールを送信しましたので、ご確認いただき、掲載のリンクを押下して登録を完了してください。\nその後、ログイン画面から再度ログインしてください。</string>
    <string name="failureSendingText">確認メールの送信に失敗しました。再送ボタンを押してください。</string>
    <string name="afterSendingButtonTitle">ログイン画面へ</string>
    <string name="resendButtonTitle">再送</string>

    // 04_ログイン画面
    <string name="LoginActivityTitle">ログイン</string>
    <string name="signInButton">ログイン</string>
    <string name="email_address_input_error">メールアドレスを入力してください。</string>
    <string name="password_input_error">パスワードの入力文字数は4文字以上8文字以下です。</string>

    // 05_入出金明細画面
    <string name="transaction_details_tab">入出金明細</string>
    <string name="balance_tab">収支</string>

    // 06_入出金登録・編集画面
    <string name="balance_text">収支</string>
    <string name="expenses_radio_button_text">支出</string>
    <string name="income_radio_button_text">収入</string>
    <string name="amount_text">金額</string>
    <string name="category_text">カテゴリ</string>
    <string name="date_text">日付</string>
    <string name="content_text">内容</string>
    <string name="register_button_text">登録する</string>
    <string name="modify_button_text">修正する</string>

    // アクションバー
    <string name="logout_button_text">ログアウト</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>